# mouse-control-via-eye-tracking

./: README.md  pyproject.toml  render.yaml  requirements.txt
EyeViaController/: app.py  eye_mouse.py  requirements.txt
api/: app.py
