[project]
name = "mouse-control-via-eye-tracking"
version = "0.1.0"
description = "EyeViaController FastAPI deployment"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.23.2",
    "python-multipart",
    "opencv-python",
    "numpy",
    "mediapipe"
]

[tool.vercel]
framework = "python"
